package com.yyzy.constellation.tally.util;

public interface OnClickSure {
    void onSure();
    void onCancel();
}
